--- a/src/components/widgets/newslist.module.css
+++ b/src/components/widgets/newslist.module.css
@@ -14,12 +14,16 @@
     line-height: 21px;
     margin:5px 0;
     color:#525252;
-}  
+}
+  
 .newslist_item a{
     text-decoration: none;
-    
 }  
- 
+
+.left{
+   text-decoration: none;
+}
+
 .newslist_wrapper{
     box-sizing: border-box;
     opacity: 0;
